<resources>
    <string name="app_name">Conslife</string>
    <string name="dot_abbreviation">pts</string>
    <string name="hint_search_view">Enter the mission name</string>
    <string name="activity_login_text_welcome">Welcome to Conslife!</string>
    <string name="activity_login_button_login">Login</string>
    <string name="activity_login_login_alternatives">Or login with</string>
    <string name="conslife_motto">You more conscious</string>
    <string name="activity_login_hint_email">Email</string>
    <string name="activity_login_hint_password">Password</string>
    <string name="activity_login_create_account">You dont have an account? create</string>
    <string name="activity_login_create_here">here</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_know_more">know more</string>
    <string name="mission_card_realization">Realization</string>
    <string name="mission_card_deadline">Deadline</string>
    <string name="round_counter_title">Free</string>
    <string name="activity_login_logo_description">Conslife logo</string>
    <string name="activity_login_conslife_motto">You, more conscious!</string>
    <string name="reward_head_points">points</string>
    <string name="reward_head_your_points">your points</string>
    <string name="reward_head_image_description">bounty jar</string>
    <string name="btn_reward_card_reserve">Reserve</string>
    <string name="reward_card_available_count">Available</string>
    <string name="reward_card_deadline">Available until:</string>
    <string name="menu_home">Home</string>
    <string name="menu_rewards">Rewards</string>
    <string name="menu_missions">Missions</string>
    <string name="menu_ranking">Ranking</string>
    <string name="my_mission_menu_current">Current</string>
    <string name="my_mission_menu_future">Future</string>
    <string name="my_mission_menu_past">Past</string>
    <string name="activity_my_mission_title">My Missions</string>
    <string name="title_page_rewards">Rewards</string>
    <string name="image_description_signal_brand">brand symbol</string>
    <string name="title_page_find_mission">Available Missions</string>
    <string name="title_page_general_ranking">General Ranking</string>
    <string name="title_page_monthly_ranking">Monthly Ranking</string>
    <string name="fragment_current_mission_button_confirm">confirm participation</string>
    <string name="fragment_current_mission_hour">Hour</string>
    <string name="fragment_current_mission_date">Date</string>
    <string name="image_description_avatar">user avatar</string>
    <string name="mission_card_past_status">Status</string>
    <string name="screen_confirm_mission_instruction">Ask the mission supervisor to scan the QR Code below.</string>
    <string name="screen_confirm_mission_image_description_qrcode">QR Code to confirm participation in mission</string>
    <string name="toast_apply_success">You have successfully signed up for the quest:</string>
    <string name="btn_applied">Applied</string>
    <string name="toast_without_point">You don\'t have enough points</string>
    <string name="toast_cancel_success">Your enrollment in the %s mission has been canceled</string>
    <string name="toas_reward_success">You have redeemed the reward, in your email there is more information.</string>
    <string name="screen_reward_details_reward">Reward</string>
    <string name="activity_sign_up_btn_sign_up">Sign Up</string>
    <string name="activity_signup_already_account">Already have an account?</string>
    <string name="activity_sign_up_title">Sign up for Conslife</string>
    <string name="activity_sign_up_error_empty_password">Please enter password</string>
    <string name="activity_sign_up_error_empty_email">Please enter email</string>
    <string name="activity_sign_up_error_short_password">Password must be at least 6 characters long</string>
    <string name="activity_sign_up_error_invalid_email">Please provide a valid email</string>
    <string name="activity_sign_up_error_email_taken">An account with this email already exists</string>
    <string name="activity_sign_up_error_unknown">An unknown error occurred that prevented your registration</string>
    <string name="activity_sign_up_error_no_internet">Re-establish the internet connection to complete your registration</string>
    <string name="activity_sign_up_sign_in">Click here to sign in</string>
    <string name="activity_sign_up_error_password_mismatch">Passwords are not the same</string>
    <string name="activity_login_hint_password_confirm">Password confirm</string>
    <string name="toast_sign_up_success">Sign up successful</string>
    <string name="login_failed">Login failed. Check your email and password.</string>
    <string name="google_sign_failed">Google sign in failed</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>