<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mission_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/praia"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/gradient_fillet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/gradient_white_bottom_up"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/mission_image" />

    <com.conslife.widget.FloatingPoints
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:floating_points_total="500"
        app:layout_constraintBottom_toTopOf="@+id/heading_mission"
        app:layout_constraintStart_toStartOf="@id/heading_mission" />

    <com.conslife.widget.DoubleHeading
        android:id="@+id/heading_mission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:maxWidth="100dp"
        app:double_heading_size="h4"
        app:double_heading_sub_title="Cuba, Havana"
        app:double_heading_title="Ajuda Humanitária"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mission_image" />


    <LinearLayout
        android:id="@+id/date_time_mission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/heading_mission">

        <com.conslife.widget.DoubleHeading
            android:id="@+id/mission_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:double_heading_size="h1"
            app:double_heading_sub_title="@string/fragment_current_mission_date"
            app:double_heading_title="02/07/2022" />

        <com.conslife.widget.DoubleHeading
            android:id="@+id/mission_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:double_heading_size="h1"
            app:double_heading_sub_title="@string/fragment_current_mission_hour"
            app:double_heading_title="15:29 h" />
    </LinearLayout>

    <com.conslife.widget.ButtonConslife
        android:id="@+id/button_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_time_mission"
        app:text="@string/fragment_current_mission_button_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>