<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mission_card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/mission_card_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_weight="2"
                    android:padding="0dp">

                    <ImageView
                        android:id="@+id/mission_card_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <TextView
                        android:id="@+id/mission_card_mission_title"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:orientation="horizontal">

                        <com.conslife.widget.DoubleHeading
                            android:id="@+id/mission_card_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:double_heading_size="h1"
                            app:double_heading_sub_title="@string/mission_card_realization"
                            app:double_heading_title="03/03/2023" />

                        <com.conslife.widget.DoubleHeading
                            android:id="@+id/mission_card_deadline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:double_heading_size="h1"
                            app:double_heading_sub_title="@string/mission_card_deadline"
                            app:double_heading_title="03/03/2023" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <com.conslife.widget.ButtonConslife
                            android:id="@+id/mission_card_btn_know_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            app:text="@string/btn_know_more"
                            app:type="primary_not_filled" />

                        <com.conslife.widget.ButtonConslife
                            android:id="@+id/mission_card_btn_apply"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3.5"
                            app:text="@string/btn_apply"
                            app:type="primary_filled" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.conslife.widget.FloatingPoints
        android:id="@+id/mission_card_floating_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        app:floating_points_total="500"
        app:floating_points_type="primary"
        app:layout_constraintStart_toStartOf="@+id/mission_card_container"
        app:layout_constraintTop_toTopOf="@+id/mission_card_container" />

    <com.conslife.widget.FloatingRoundCounter
        android:id="@+id/mission_card_vacancies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        app:floating_round_counter_title="@string/round_counter_title"
        app:floating_round_counter_total="06"
        app:floating_round_counter_type="primary"
        app:layout_constraintEnd_toEndOf="@+id/mission_card_container"
        app:layout_constraintTop_toTopOf="@+id/mission_card_container" />

</androidx.constraintlayout.widget.ConstraintLayout>